# cove-qt

./: .gitignore  CMakeLists.txt
qml/: Dock.qml  Launcher.qml  Main.qml
qml/statusbar/: Main.qml  StatusBar.qml
src/: dock.cpp  dock.h  launcher.cpp  launcher.h  main.cpp  statusbar.cpp  statusbar.h
src/helper/: applauncher.cpp  applauncher.h  battery.cpp  battery.h  configmanager.cpp  configmanager.h  desktopfile.cpp  desktopfile.h  desktopiconloader.cpp  desktopiconloader.h
